--- a/views/partials/navbar-sidebar.html
+++ b/views/partials/navbar-sidebar.html
@@ -3,7 +3,7 @@
         <ul class="nav" id="side-menu">
 
             <li>
-                <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                <a href="/"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
             </li>
             <li>
                 <a href="#"><i class="fa fa-wrench fa-fw"></i> Tools<span class="fa arrow"></span></a>
@@ -12,7 +12,7 @@
                         <a href="#">Tool 1</a>
                     </li>
                     <li>
-                        <a href="rendas.html">Simulação Rendas</a>
+                        <a href="rendas">Simulação Rendas</a>
                     </li>
                     <li>
                         <a href="#">Tool 2</a>
@@ -21,7 +21,7 @@
                 <!-- /.nav-second-level -->
             </li>
             <li>
-                <a href="clientes.html"><i class="fa fa-users fa-fw"></i> Clientes</a>
+                <a href="clientes"><i class="fa fa-users fa-fw"></i> Clientes</a>
             </li>
             <li>
                 <a href="#"><i class="fa fa-cogs fa-fw"></i> Config</a>
