--- a/views/partials/modal-clientes.hbs
+++ b/views/partials/modal-clientes.hbs
@@ -1,32 +1,87 @@
-<!-- Modal Adicionar Cliente-->
 <div id="{{ modal_id }}" class="modal fade" role="dialog">
     <div class="modal-dialog modal-lg">
 
         <!-- Modal content-->
         <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header modal-header-primary" >
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">{{ modal_title }}</h4>
             </div>
             <div class="modal-body">
-                <div class="container">
-                    <div class="row form-inline">
-                        <div class="form-group">
-                            <label>Nome</label>
-                            <input class="form-control" id="clinom">
-                        </div>
-                        <div class="form-group">
-                            <label>Morada</label>
-                            <input class="form-control" id="climor">
+                <form class="form-horizontal">
+
+                    <div class="form-group">
+                        <label class="control-label col-md-2 col-sm-2">Código</label>
+                        <div class="col-md-3 col-sm-3"><input class="form-control" id="clinum"></div>
+
+                        <div class="col-md-7 col-sm-7">
+                            <label class="control-label radio-inline col-md-2 col-sm-2">
+                                Empresa
+                            </label>
+                            <input class="col-md-2 col-sm-3" type="radio" name="cliemppart">
+                            <label class="control-label radio-inline col-md-2 col-sm-2">
+                                Particular
+                            </label>
+                            <input class="col-md-2 col-sm-3" type="radio" name="cliemppart">
                         </div>
                     </div>
-                </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-2 col-sm-2" for="nacionalidade">Nacionalidade</label>
+                        <div class="col-md-3 col-sm-3">
+                            <select class="form-control" id="nacionalidade">
+                                {{#each paises}}
+                                    <option value="{{ codigo }}">{{ nomepais }}</option>
+                                {{/each}}
+                            </select>
+                        </div>
+                        <label class="control-label col-md-2 col-sm-2">NIF</label>
+                        <div class="col-md-3 col-sm-4"><input class="form-control" id="nif"></div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-2 col-sm-2">Nome</label>
+                        <div class="col-md-8 col-sm-9"><input class="form-control" id="nome"></div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-2 col-sm-2">Morada</label>
+                        <div class="col-md-8 col-sm-9"><input class="form-control" id="morada"></div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-8 col-md-offset-2 col-sm-9 col-sm-offset-2"><input class="form-control" id="morada2"></div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-2 col-sm-2 col-sm-offset-2 col-xs-3"><input class="form-control" id="codpostal1"></div>
+                        <div class="col-md-1 col-sm-2 col-xs-3"><input class="form-control" id="codpostal2"></div>
+                        <div class="col-md-5 col-sm-5 col-xs-6"><input class="form-control" id="localidade"></div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-2 col-sm-2">Email</label>
+                        <div class="col-md-8 col-sm-9"><input class="form-control" id="email"></div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-2 col-sm-2">WebSite</label>
+                        <div class="col-md-8 col-sm-9"><input class="form-control" id="website"></div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-2 col-sm-2">Telefone</label>
+                        <div class="col-md-3 col-sm-3"><input class="form-control" id="telefone"></div>
+                        <label class="control-label col-md-2 col-sm-2">Nascido a</label>
+                        <div class="col-md-3 col-sm-4"><input class="form-control" type="date" id="datanascimento"></div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-1 col-sm-1"></div>
+                        <label style="margin-left:10px" class="checkbox-inline control-label col-md-2 col-md-offset-2 col-sm-2 col-sm-offset-2 col-xs-12" id="tipoiva"><input type="checkbox" value="">Sucursal</label>
+                        <label class="checkbox-inline control-label col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1 col-xs-12" id="tipoiva"><input type="checkbox" value="">Iva caixa</label>
+                        <label class="checkbox-inline control-label col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1 col-xs-12" id="tipoiva"><input type="checkbox" value="">Cli Banco</label>
+                    </div>
+                </form>
             </div>
+
             <div class="modal-footer">
-                <button type="button" class="btn btn-info" data-dismiss="modal">Salvar</button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Fechar</button>
+                <button type="button" class="btn btn-info" data-dismiss="modal">Guardar</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
             </div>
         </div>
-
     </div>
 </div>
+   
