--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,39 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+
+<div class="col-lg-12">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            Qualquer coisa inventada sobre Lease
+        </div>
+        <!-- /.panel-heading -->
+        <div class="panel-body">
+            <div id="morris-bar-chart"></div>
+        </div>
+        <!-- /.panel-body -->
+    </div>
+    <!-- /.panel -->
+</div>
+
+
+
+
+<div class="col-lg-12">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            Condições Climáticas
+        </div>
+        <div class="panel-body">
+            <div id="c_7c4a40800ade910c1b55b7feabaab39c" class="ancho"><h2
+                    style="color: #000000; margin: 0 0 3px; padding: 2px; font: bold 13px/1.2 Arial; text-align: center; text-transform:none; width=100%">
+                <a href="http://www.otempo.pt/lisboa.html"
+                   style="color: #000000; text-decoration: none; text-transform: none; font: bold 13px/1.2 Arial;"> Lisboa</a></h2>
+                <div id="w_7c4a40800ade910c1b55b7feabaab39c" class="ancho" style="height:100%"></div>
+            </div>
+            <script type="text/javascript" src="http://www.otempo.pt/dados/loader/7c4a40800ade910c1b55b7feabaab39c"></script>
+        </div>
+    </div>
+</div>
+
+
+
