Acrescentadas as páginas Simul e Cliente

--- a/views/partials/navbar-sidebar.html
+++ b/views/partials/navbar-sidebar.html
@@ -12,7 +12,7 @@
                         <a href="#">Tool 1</a>
                     </li>
                     <li>
-                        <a href="rendas">Simulação Rendas</a>
+                        <a href="simul">Simulação Rendas</a>
                     </li>
                     <li>
                         <a href="#">Tool 2</a>
