Alterados os css para less e datatables para server_processing

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,7 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
-
 <div class="col-lg-12">
     <div class="panel panel-default">
         <div class="panel-heading">
-            Qualquer coisa inventada sobre Lease
+            Volume de negócio
         </div>
         <!-- /.panel-heading -->
         <div class="panel-body">
