--- a/views/login.hbs
+++ b/views/login.hbs
@@ -20,6 +20,9 @@
     <!-- Custom CSS -->
     <link href="../dist/css/sb-admin-2.css" rel="stylesheet">
 
+    <!-- O nosso CSS -->
+    <link href="../stylesheets/audaxysFront.css" rel="stylesheet">
+
     <!-- Custom Fonts -->
     <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
@@ -40,7 +43,7 @@
         <!-- Modal content-->
         <div class="modal-content">
 
-            <div class="modal-header modal-header-info">
+            <div class="modal-header modal-header-primary">
                 <!-- <button type="button" class="close" data-dismiss="modal">&times;</button>-->
                 <h4 class="modal-title ">Faça o seu Login</h4>
             </div>
