--- a/views/partials/navbar-dropdown.html
+++ b/views/partials/navbar-dropdown.html
@@ -15,7 +15,7 @@
             <li><a href="#" onclick="changeCSS('../dist/css/sb-admin-2-dark.css', 2);"><i class="fa fa-circle fa-fw"></i> Dark Theme</a>
             </li>
             <li class="divider"></li>
-            <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+            <li><a href="logout"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
             </li>
         </ul>
         <!-- /.dropdown-user -->
