--- a/views/clientes.hbs
+++ b/views/clientes.hbs
@@ -26,20 +26,23 @@
             <div class="panel-body">
                 <div class="form-inline row">
                     <div class="form-group">
-                        <label for="search">Pesquisa</label>
-                        <input class="form-control" id="search">
-                        <label for="cod_restricao">Restrição</label>
-                        <select class="form-control" id="cod_restricao">
-                        {{#each restricoes}}
-                            <option>{{ codigo }}</option>
-                        {{/each}}
-                        </select>
+                        <!--<label for="search">Pesquisa</label>
+                        <input class="form-control" id="search">-->
+                        <div id="toolbar_html">
+                            <label for="cod_restricao">Restrição</label>
+                            <select class="form-control" id="cod_restricao" onchange="$('#dataTables-clientes').DataTable().ajax.reload()">
+                                <option>--</option>
+                                {{#each restricoes}}
+                                <option>{{ codigo }}</option>
+                            {{/each}}
+                            </select>
+                        </div>
                     </div>
                 </div>
                 <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-clientes">
                     <thead>
                     <tr>
-                        <th>Código</th>
+                        <th name="clinum">Código</th>
                         <th>Nome</th>
                         <th>Email</th>
                         <th>Telefone</th>
@@ -49,11 +52,11 @@
                     <tbody>
                     {{#each clientes}}
                         <tr class="odd gradeX">
-                            <td>{{ numero }}</td>
-                            <td>{{ nome }}</td>
-                            <td>{{ email }}</td>
-                            <td>{{ telefone }}</td>
-                            <td>{{ nif }}</td>
+                            <td>{{ clinum }}</td>
+                            <td>{{ clinom }}</td>
+                            <td>{{ clitlx }}</td>
+                            <td>{{ clitel }}</td>
+                            <td>{{ clinfis }}</td>
                         </tr>
                     {{/each}}
                     <!-- deixei isto aqui para se perceber para que serve o odd e even e os gradeC/X
