Alterações ao CSS e à pagina de clientes

--- a/public/less/audaxysFront.less
+++ b/public/less/audaxysFront.less
@@ -124,4 +124,9 @@
   left: 12px; /* @grid-gutter-width / 2 */
 }
 
+.panel-primary > .panel-heading-audaxys {
+  background: @cor-audaxys;
+  color: #fff;
+}
 
+div.toolbar { float:left; width:20% }
