--- a/views/clientes.hbs
+++ b/views/clientes.hbs
@@ -1,29 +1,23 @@
 {{> modal_clientes }}
 
 
-<div class="row">
-    <div class="col-lg-12">
-        <h1 class="page-header">Clientes
-            <button type="button" class="btn btn-success btn-circle" data-toggle="modal" data-target="#{{ modal_id }}">
-                <i class="fa fa-plus"></i>
-            </button>
-        </h1>
-
-    </div>
-    <!-- /.col-lg-12 -->
-</div>
 <!-- /.row -->
 <div class="row">
     <div class="col-lg-12">
-        <div class="panel panel-default">
-            <div class="panel-heading">
+        <div class="panel panel-primary">
+            <div class="panel-heading panel-heading-audaxys">
+                <h3>Clientes
+                    <button type="button" class="btn btn-success btn-circle" data-toggle="modal" data-target="#{{ modal_id }}">
+                        <i class="fa fa-plus"></i>
+                    </button>
+                </h3>
+            </div>
+            <!-- /.panel-heading -->
+            <div class="panel-body">
                 <ul class="breadcrumb">
                     <li><a href="/">Home</a></li>
                     <li class="active">Clientes</li>
                 </ul>
-            </div>
-            <!-- /.panel-heading -->
-            <div class="panel-body">
                 <div class="form-inline row">
                     <div class="form-group">
                         <!--<label for="search">Pesquisa</label>
