Alterações de formatação

--- a/views/cliente.hbs
+++ b/views/cliente.hbs
@@ -1,11 +1,14 @@
 {{> modal_clientes }}
 
+<br>
+<br>
+
 <div class="row">
-    <div class="col-md-7 col-lg-7">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h2>Cliente
-                    <button type="button" class="btn btn-success btn-circle" data-toggle="modal"
+    <div class="col-md-6 col-lg-6">
+        <div class="panel panel-default panel-primary">
+            <div class="panel-heading ">
+                <h4>Cliente
+                    <button type="button" class="btn btn-success btn-circle btn-xs" data-toggle="modal"
                             data-target="#{{ modal_id }}">
                         <i class="fa fa-pencil"></i>
                     </button>
@@ -25,7 +28,7 @@
                             </li>
                         </ul>
                     </span><!-- /.dropdown -->
-                </h2>
+                </h4>
             </div>
             <div class="panel-body">
                 <div class="container-fluid">
@@ -65,10 +68,10 @@
             </div>
         </div>
     </div>
-    <div class="col-md-5 col-lg-5">
-        <div class="panel panel-default">
+    <div class="col-md-6 col-lg-6">
+        <div class="panel panel-default panel-primary">
             <div class="panel-heading">
-                <h2>Localização</h2>
+                <h4>Localização</h4>
             </div>
             <div class="panel-body">
                 <img src="../img/Mapa.PNG" width="100%"/>
@@ -78,9 +81,9 @@
 </div>
 <div class="row">
     <div class="col-md-6 col-lg-6">
-        <div class="panel panel-default">
+        <div class="panel panel-default panel-primary">
             <div class="panel-heading">
-                <h2>Contratos</h2>
+                <h4>Contratos</h4>
             </div>
             <div class="panel-body">
                 <img src="../img/Tabela.PNG" width="100%"/>
@@ -88,9 +91,9 @@
         </div>
     </div>
     <div class="col-md-6 col-lg-6">
-        <div class="panel panel-default">
+        <div class="panel panel-default panel-primary">
             <div class="panel-heading">
-                <h2>Propostas</h2>
+                <h4>Propostas</h4>
             </div>
             <div class="panel-body">
                 <img src="../img/Grafico.PNG" width="100%"/>
