--- a/views/partials/navbar-sidebar.html
+++ b/views/partials/navbar-sidebar.html
@@ -14,7 +14,7 @@
                         <a href="#">Tool 1</a>
                     </li>
                     <li>
-                        <a href="simul">Simulação Rendas</a>
+                        <a href="/simul">Simulação Rendas</a>
                     </li>
                     <li>
                         <a href="#">Tool 2</a>
@@ -23,7 +23,7 @@
                 <!-- /.nav-second-level -->
             </li>
             <li>
-                <a href="clientes"><i class="fa fa-users fa-fw"></i> Clientes</a>
+                <a href="/clientes"><i class="fa fa-users fa-fw"></i> Clientes</a>
             </li>
             <li>
                 <a href="#"><i class="fa fa-cogs fa-fw"></i> Config</a>
