--- a/views/login.hbs
+++ b/views/login.hbs
@@ -48,18 +48,18 @@
                 <h4 class="modal-title ">Faça o seu Login</h4>
             </div>
             <div class="modal-body">
-                <form class="form-horizontal">
+                <form class="form-horizontal" name="login_form" action="/login" method="post">
                     <div class="form-group"></div> <!-- espaçamento -->
                     <div class="form-group has-feedback has-feedback-left">
                         <div class="col-md-10 col-md-offset-1">
-                            <input class="form-control" id="username" placeholder="Utilizador">
+                            <input class="form-control" id="username" name="name" placeholder="Utilizador">
                             <i class="glyphicon glyphicon-user form-control-feedback"></i>
                         </div>
                     </div>
                     <div class="form-group has-feedback has-feedback-left">
                         <!--<label class="control-label col-md-3" for="password">Password</label>-->
                         <div class="col-md-10 col-md-offset-1">
-                            <input type="password" class="form-control" id="password" placeholder="Password">
+                            <input type="password" class="form-control" id="password" name="password" placeholder="Password">
                             <i class="glyphicon glyphicon-lock form-control-feedback"></i>
                         </div>
                     </div>
@@ -69,11 +69,11 @@
                             <div class="col-md-1 col-sm-1 col-xs-1"><input type="checkbox" value=""></div>Lembrar-me?</label>
                     </div>
 
+
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-info col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1" data-dismiss="modal">Entrar</button>
-                <!--<button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>-->
+                <button type="submit" onClick="login_form.submit();" class="btn btn-info col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1" data-dismiss="modal" >Entrar</button>
             </div>
         </div>
 
@@ -92,7 +92,16 @@
 <!-- Custom Theme JavaScript -->
 <script src="../dist/js/sb-admin-2.js"></script>
 
+<script>
+    function doLogin(){
 
+        var bodyValues = {
+                    username : $('#username').val(),
+                    password : $('#password').val()
+        };
+        alert("Username: " + username + " Password: "+ password);
+    }
+</script>
 
 </body>
 
