--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -63,7 +63,8 @@
 <!-- jQuery -->
 
 <script src="../vendor/jquery/jquery.min.js"></script>
-<script src="http://malsup.github.com/jquery.form.js"></script>
+<script src="../vendor/parsley/parsley.min.js"></script>
+<script src="../vendor/parsley/pt-pt.js"></script>
 <!-- Bootstrap Core JavaScript -->
 <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
 
@@ -122,7 +123,8 @@
         $('#{{idtabela}} tbody').on('dblclick', 'tr', function () {
             var table = $('#{{idtabela}}').DataTable();
             console.log(table.row(this).data().clinum);
-            window.location = "{{ tabledblhref }}/" + table.row(this).data().clinum
+            var tokenValue = sessionStorage.getItem("token");
+            window.location = "{{ tabledblhref }}/" + table.row(this).data().clinum + "?auth=" + tokenValue
         } );
 
     });
@@ -142,12 +144,15 @@
 </script>
 {{#if temModal}}
     <script>
+
         $(document).ready(function() {
+            var frm = $('#modal_form');
+            frm.parsley();
             // bind 'myForm' and provide a simple callback function
             $('#modal_submit').click(function () {
-                var frm = $('#modal_form');
-                var isvalid = frm[0].checkValidity();
-                if (isvalid) {
+
+                if(frm.parsley().validate()) {
+                    $('#{{ modal_id }}').modal('hide');
                     $.ajax({
                         type: frm.attr('method'),
                         url: frm.attr('action'),
@@ -168,12 +173,25 @@
                             $('#errmsg-dialog').modal('show');
                         }
                     });
-                }
 
+                }
             });
         });
     </script>
 {{/if}}
+<script>
+    $(document).ready(function() {
+        $('a').attr('href', function (index, value) {
+            if(value=="#"){ return value;}
+            var tokenValue = sessionStorage.getItem("token");
+            if(tokenValue){
+                return value + '?auth=' + tokenValue;
+            } else {
+                return value;
+            }
+        });
+    });
+</script>
 
 </body>
 
