--- a/views/partials/navbar-dropdown.html
+++ b/views/partials/navbar-dropdown.html
@@ -15,10 +15,16 @@
             <li><a href="#" onclick="changeCSS('../dist/css/sb-admin-2-dark.css', 2);"><i class="fa fa-circle fa-fw"></i> Dark Theme</a>
             </li>
             <li class="divider"></li>
-            <li><a href="logout"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+            <li><a href="#" onclick="logoutUser()"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
             </li>
         </ul>
         <!-- /.dropdown-user -->
     </li>
     <!-- /.dropdown -->
 </ul>
+<script>
+    function logoutUser(){
+        sessionStorage.removeItem("token");
+        window.location = "/login";
+    }
+</script>
